# TechTheCoconut

./: .gitignore  README
divers/: README  soft_scripts.html  (+1 more)
software/avr/: .gitignore  CMakeLists.txt  README  TimerPrescaler.py  atmega_328p.cmake
software/avr/asservissement/: .gitignore  Makefile  README  main.cpp
software/avr/asservissement/include/: asservissement.h  communication.h  communicationPC.h  i2c.h  moteur.h  moteur.hpp  prescaler.hpp  pwm.hpp  robot.h  rotation.h  safe_enum.hpp  serie.h  timer.h  timer.hpp  translation.h
software/avr/asservissement/src/: Makefile  asservissement.cpp  communication.cpp  communicationPC.cpp  i2c.cpp  moteur.cpp  robot.cpp  rotation.cpp  serie.cpp  timer.cpp  translation.cpp
software/avr/atmega1280/: CMakeLists.txt  atmega1280.cmake
software/avr/atmega1280/balise_robot/: main.cpp
software/avr/atmega1280/balise_robot_with_ntp/: main.cpp
software/avr/atmega2560/: CMakeLists.txt  atmega2560.cmake  fuse_settings.txt
software/avr/atmega2560/balise_robot/: main.cpp
software/avr/atmega2560/print_serial_2560/: main.c
software/avr/atmega324p/: CMakeLists.txt  atmega324p.cmake
software/avr/atmega324p/actionneurs/: main.cpp  protocole.txt
software/avr/atmega324p/capteurs-actionneurs/: main.cpp  ultrason.h
software/avr/atmega328p/: .gitignore  CMakeLists.txt  atmega328p.cmake
software/avr/atmega328p/actionneurs/: main.cpp
software/avr/atmega328p/actionneurs_1/: actionneurs.c
software/avr/atmega328p/actionneurs_2/: actionneurs.c  actionneurs.h  ax12.c  ax12.h  main.c  makefile  serial.c
software/avr/atmega328p/actionneurs_arduino/: main.cpp
software/avr/atmega328p/asservissement/: README  main.cpp  protocole.txt
software/avr/atmega328p/balise_adverse/: main.c  testEmission.c  testReception.c
software/avr/atmega328p/balise_adverse_4_fenetres/: main.c
software/avr/atmega328p/balise_adverse_with_ntp/: main.c
software/avr/compteur/: Makefile  compteur.c  main.c  serial.c  serial.h
(+379 files in other folders)
